<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEditMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tap_on_a_button_above_to_begin_the_pairing_process_with_your_ir_device"
        android:textAlignment="center"
        android:textColor="#D4E157"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTVOnly"
        app:layout_constraintVertical_bias="0.25"
        app:drawableTopCompat="@drawable/ic_baseline_arrow_upward_24" />

    <TextView
        android:id="@+id/tvMainActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_actions"
        android:textAppearance="@style/AppTheme.TextAppearance.Header"
        app:layout_constraintBottom_toTopOf="@+id/btnTurnOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnTurnOn"
        style="@style/AppTheme.Button.Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="handleButtonClick"
        android:text="@string/turn_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHiddenOptions"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTurnOff"
        style="@style/AppTheme.Button.Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="handleButtonClick"
        android:text="@string/turn_off"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnTurnOn"
        app:layout_constraintTop_toTopOf="@+id/btnTurnOn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvVolumeActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/volume_actions"
        android:textAppearance="@style/AppTheme.TextAppearance.Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvMainActions"
        app:layout_constraintTop_toBottomOf="@+id/btnTurnOn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVolUp"
        style="@style/AppTheme.Button.Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="handleButtonClick"
        android:text="@string/vol_up"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvVolumeActions"
        app:layout_constraintTop_toBottomOf="@+id/tvVolumeActions"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVolDown"
        style="@style/AppTheme.Button.Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="handleButtonClick"
        android:text="@string/vol_down"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnVolUp"
        app:layout_constraintTop_toTopOf="@+id/btnVolUp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvOtherControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/other_controls"
        android:textAppearance="@style/AppTheme.TextAppearance.Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvMainActions"
        app:layout_constraintTop_toBottomOf="@+id/btnVolUp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTVOnly"
        style="@style/AppTheme.Button.Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="handleButtonClick"
        android:text="@string/tv_on_off"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvMainActions"
        app:layout_constraintTop_toBottomOf="@+id/tvOtherControls"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnMute"
        style="@style/AppTheme.Button.Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="handleButtonClick"
        android:text="@string/toggle_mute"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnTurnOff"
        app:layout_constraintTop_toTopOf="@+id/btnTurnOff"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnSetupButtonsDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/setupButtonBg"
        android:clickable="true"
        android:focusable="true"
        android:onClick="handleButtonClick"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTVOnly"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/btnHiddenOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:onClick="handleButtonClick"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        android:contentDescription="@string/extra_options" />

</androidx.constraintlayout.widget.ConstraintLayout>